--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-#theme: just-the-docs
-plugins:
-  - jekyll-feed
+theme: just-the-docs
+# plugins:
+#   - jekyll-feed
 collections:
   docs:
     output: true
