--- a/_config.yml
+++ b/_config.yml
@@ -24,15 +24,15 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-theme: minima
 # baseurl: "/docs" # the subpath of your site, e.g. /blog
 # url: "https://alihamza174.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
 # Build settings
-# plugins:
-#   - jekyll-feed
+theme: minima
+plugins:
+  - jekyll-feed
 collections:
   docs:
     output: true
