--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+        with:
+          ruby-version: 2.7
+      - name: Install Bundler
+        run: gem install bundler
+      - name: Install dependencies
+        run: bundle install
+      - name: Build with Jekyll
+        run: bundle exec jekyll build
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
