--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -35,7 +35,9 @@ jobs:
       - name: Install Bundler
         run: gem install bundler --user-install
       - name: Install dependencies
-        run: bundle install --path vendor/bundle
+        run: |
+          export PATH="$HOME/.gem/ruby/$(ruby -e 'puts RUBY_VERSION')/bin:$PATH"
+          bundle install --path vendor/bundle
       - name: Build with Jekyll
         run: bundle exec jekyll build
       - name: Build with Jekyll
